--- a/ffmpegLib/build.gradle
+++ b/ffmpegLib/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 11
         versionName "2.0.3"
@@ -35,4 +35,5 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':uvccamera')
 }
