修改编译脚本

--- a/libffmpeg/CMakeLists.txt
+++ b/libffmpeg/CMakeLists.txt
@@ -314,7 +314,7 @@ if (${ANDROID_ABI} STREQUAL "x86_64")
 endif (${ANDROID_ABI} STREQUAL "x86_64")
 
 include_directories(
-        $../{CMAKE_SOURCE_DIR}/ffmpeg-4.1.3/
+        /Users/cxy/work/projects/xcb_projects/AndroidFFmpeg/ffmpeg-4.1.3/
 
 )
 
