--- a/libffmpeg/build.gradle
+++ b/libffmpeg/build.gradle
@@ -37,4 +37,5 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':uvccamera')
+    implementation 'androidx.annotation:annotation:1.1.0'
 }
