--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation "org.permissionsdispatcher:permissionsdispatcher:4.5.0"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:4.5.0"
     implementation "com.android.support:recyclerview-v7:28.0.3"
     implementation project(':libffmpeg')
     implementation project(':uvccamera')
+    implementation project(':cameralibrary')
 }
